Explore using ui-router and ui-bootstrap together

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a class="navbar-brand" href="#">noise pollution maps</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a ui-sref="#">add data</a></li>
+      <li><a ui-sref="add-data">add data</a></li>
       <li><a ui-sref="#">change city</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
@@ -24,13 +24,23 @@
     </ul>
   </nav>
 
-  <ui-view></ui-view>
+  <!--
+  <div class="map-container">
+    <mapbox map-id="licyeus.j10o6g8f" lat="47.623569" lng="-122.329453" zoom="13" height="100%" width="100%">
+      <marker ng-repeat="datum in data" lat="{{datum.lat}}" lng="{{datum.lng}}">
+        <h1>{{datum.db_level}} decibels</h1>
+        <p>{{datum.datetime}}</p>
+      </marker>
+    </mapbox>
+  </div>
+  -->
 
   <script src="https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js"></script>
   <script src="/bower_components/jquery/dist/jquery.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/js/lib/angular-mapbox.js"></script>
   <script src="/js/app.js"></script>
 </body>
